--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,6 +2,6 @@ FROM nginx:1.13.0
 
 RUN mkdir /opt/static
 ADD conf.d/default.conf /etc/nginx/conf.d/default.conf
-ADD static/index.html /opt/static/index.html
+ADD static /opt/static
 
 RUN mkdir /opt/static/formassist
