--- a/fess01/Dockerfile
+++ b/fess01/Dockerfile
@@ -1,4 +1,4 @@
-FROM codelibs/fess:13.4.3
+FROM ghcr.io/codelibs/fess:13.4.3
 
 ADD config/doc.json /usr/share/fess/app/WEB-INF/classes/fess_indices/fess/doc.json
 ADD config/fess_config.properties /etc/fess/fess_config.properties
